tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_as_unused_trait_fn_param_type/execute__tests__noirc_frontend_tests_numeric_generic_as_unused_trait_fn_param_type_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused trait Foo
  ┌─ src/main.nr:2:11
  │
2 │     trait Foo {
  │           --- unused trait
  │

error: Expected type, found numeric generic
  ┌─ src/main.nr:3:32
  │
3 │         fn foo<let I: u32>(_x: I) { }
  │                                - not a type
  │

Aborting due to 1 previous error
